feat: agrega endpoint GET /api/pedidos para listar todos los pedidos y método obtenerTodosLosPedidos en PedidoService

--- a/cliente-service/pom.xml
+++ b/cliente-service/pom.xml
@@ -55,6 +55,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- H2 Database (para desarrollo) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
