--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  # Base de datos PostgreSQL para cliente-service
+  # Base de datos PostgreSQL para cliente-service y auth-service
   postgres-db:
     image: postgres:15
     container_name: postgres-cliente
@@ -8,10 +8,12 @@ services:
       POSTGRES_DB: auth_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_MULTIPLE_DATABASES: cliente_db
     ports:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db-init:/docker-entrypoint-initdb.d
     networks:
       - microservices-network
 
