--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,13 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
+        # Proxy para autenticación
+        location /api/auth/ {
+            proxy_pass http://auth-service:8081/api/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
         # Configuración de headers de seguridad
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
