Actualizacion del gitignore y el dockerignore para evitar archivos temporales de latex

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,19 @@ dist/
 
 # Others
 *.swp
+# Archivos temporales de LaTeX
+*.aux
+*.log
+*.toc
+*.out
+*.fls
+*.fdb_latexmk
+*.synctex.gz
+*.bbl
+*.blg
+*.lof
+*.lot
+*.run.xml
+
+# PDF
+*main.pdf
