--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,7 +25,7 @@ http {
 
         # Proxy para todas las APIs vía gateway
         location /api/ {
-            proxy_pass http://api-gateway:9001/api/;
+            proxy_pass http://gateway:9001/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
