--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,6 +28,35 @@ http {
             proxy_pass http://auth-service:8081/api/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy para cliente-service
+        location /api/clientes {
+            proxy_pass http://cliente-service:8082/api/clientes;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy para pedido-service
+        location /api/pedidos {
+            proxy_pass http://pedido-service:8083/api/pedidos;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy para tracking-service
+        location /api/tracking {
+            proxy_pass http://tracking-service:8084/api/tracking;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Configuración de headers de seguridad
