--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       timeout: 5s
       retries: 10
 
-  # Redis para tracking-service
+  # Base de datos Redis para tracking-service
   redis-db:
     image: redis:7-alpine
     container_name: redis-tracking
@@ -57,6 +57,24 @@ services:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 3s
+      retries: 3
+
+  # API Gateway - Punto único de entrada
+  api-gateway:
+    build: ./api-gateway
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - microservices-network
+    depends_on:
+      - auth-service
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
       retries: 3
 
   # Microservicio de autenticación
